2005-08-24  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicDesktopPaneUI.java
	(installDefaults): set background color using "desktop" color,
	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initSystemColorDefaults): removed "Desktop.background" color,
	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initSystemColorDefaults): added "desktop" color.

2005-08-23  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(stopEditing): Implemented.
	(cancelEditing): Implemented.
	(startEditingAtPath): Implemented.
	(getEditingPath): Implemented.
	(createDefaultCellEditor): Implemented.
	(updateCellEditor): Implemented.
	(completeEditing): Implemented.
	(completeEditing): Implemented.
	(startEditing): Implemented.
	(editingStopped): Implemented.
	(editingCanceled): Implemented.
	* javax/swing/tree/DefaultTreeCellEditor.java
	(stopCellEditing): Stopped the timer.
	(cancelCellEditing): Likewise.
	
2005-08-23  Lillian Angel  <langel@redhat.com>

	* javax/swing/DefaultCellEditor.java
	(getTreeCellEditorComponent): Implemented cases for JCheckBox
	and JComboBox.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(BasicTreeUI): Moved lines to installUI where the renderer
	and editor are created.
	(installUI): Likewise.
	* javax/swing/tree/DefaultTreeCellEditor.java
	(getPreferredSize): Implemented.
	(DefaultTreeCellEditor): Implemented.
	(DefaultTreeCellEditor): Implemented.
	(getTreeCellEditorComponent): Implemented.
	(getCellEditorValue): Implemented.
	(isCellEditable): Implemented.
	(shouldSelectCell): Implemented.
	(stopCellEditing): Implemented.
	(cancelCellEditing): Implemented.
	(valueChanged): Implemented.
	(actionPerformed): Implemented.
	(shouldStartEditingTimer): Implemented.
	(startEditingTimer): Implemented.
	(canEditImmediately): Implemented.
	(inHitRegion): Implemented.
	(determineOffset): Implemented.
	(prepareForEditing): Implemented.
	(createContainer): Implemented.
	(createTreeCellEditor): Implemented.
