@@ -1,5 +1,10 @@
 2005-08-24  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* javax/swing/plaf/metal/MetalBorders.java
+	(InternalFrameBorder): implemented.
+	
+2005-08-24  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* javax/swing/plaf/basic/BasicDesktopPaneUI.java
 	(installDefaults): set background color using "desktop" color,
 	* javax/swing/plaf/basic/BasicLookAndFeel.java
